# lvgl-wayland-tuto

./: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.c
